crates/arity-parser/tests/snapshots/parser_snapshots__ident_bare_dot_cst.snap
---
source: tests/parser_snapshots.rs
expression: tree
---
ROOT@0..46
  ASSIGNMENT_EXPR@0..6
    IDENT@0..1 "."
    WHITESPACE@1..2 " "
    ASSIGN_LEFT@2..4 "<-"
    WHITESPACE@4..5 " "
    INT@5..6 "5"
  NEWLINE@6..7 "\n"
  CALL_EXPR@7..11
    IDENT@7..8 "f"
    LPAREN@8..9 "("
    ARG_LIST@9..10
      ARG@9..10
        IDENT@9..10 "."
    RPAREN@10..11 ")"
  NEWLINE@11..12 "\n"
  CALL_EXPR@12..24
    IDENT@12..18 "bquote"
    LPAREN@18..19 "("
    ARG_LIST@19..23
      ARG@19..23
        CALL_EXPR@19..23
          IDENT@19..20 "."
          LPAREN@20..21 "("
          ARG_LIST@21..22
            ARG@21..22
              IDENT@21..22 "g"
          RPAREN@22..23 ")"
    RPAREN@23..24 ")"
  NEWLINE@24..25 "\n"
  ASSIGNMENT_EXPR@25..35
    IDENT@25..30 "..foo"
    WHITESPACE@30..31 " "
    ASSIGN_LEFT@31..33 "<-"
    WHITESPACE@33..34 " "
    INT@34..35 "1"
  NEWLINE@35..36 "\n"
  BINARY_EXPR@36..45
    IDENT@36..37 "x"
    WHITESPACE@37..38 " "
    USER_OP@38..41 "%>%"
    WHITESPACE@41..42 " "
    BINARY_EXPR@42..45
      IDENT@42..43 "."
      DOLLAR@43..44 "$"
      IDENT@44..45 "y"
  NEWLINE@45..46 "\n"
