crates/arity-parser/tests/snapshots/parser_snapshots__if_missing_condition_expr_diagnostics.snap
---
source: tests/parser_snapshots.rs
expression: "format!(\"{:#?}\", output.diagnostics)"
---
[
    ParseDiagnostic {
        message: "expected condition expression after 'if'",
        start: 0,
        end: 2,
    },
]
