crates/arity-parser/tests/snapshots/parser_snapshots__if_missing_condition_parens_diagnostics.snap
---
source: tests/parser_snapshots.rs
expression: "format!(\"{:#?}\", output.diagnostics)"
---
[
    ParseDiagnostic {
        message: "expected '(' after 'if'",
        start: 0,
        end: 2,
    },
]
