crates/arity-parser/tests/snapshots/parser_snapshots__if_missing_else_expr_diagnostics.snap
---
source: tests/parser_snapshots.rs
expression: "format!(\"{:#?}\", output.diagnostics)"
---
[
    ParseDiagnostic {
        message: "expected expression after 'else'",
        start: 9,
        end: 13,
    },
]
